# dozer

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DOZER-ADMIN.md  Dockerfile  LICENSE.txt  Makefile.toml  README.md  SECURITY.md  Troubleshooting.md  connector.md  coverage.lcov  coveralls.json  deny.toml  diesel.toml  docker-compose-snowflake.yml  docker-compose.yml  download-latest.sh  dozer-admin-config.yaml  dozer-config-employees.yaml  dozer-config-films.yaml  dozer-config.eth.yaml  dozer-config.snowflake.yaml  dozer-config.yaml  dozer-run.yaml  error.txt  experience.md  log4rs.sample.yaml  log4rs.yaml  mysql_cdc_integration.py  prompt.json  snowflake.Dockerfile
ci/: Dockerfile  (+4 more)
dozer-admin/: .env  Cargo.toml  DOZER-ADMIN.md  Readme.md  build.rs  diesel.toml  docker-compose.yaml
dozer-admin/protos/: admin.proto  api.proto  query.proto  types.proto
dozer-admin/src/: README.md  errors.rs  main.rs  server.rs
dozer-api/: .gitignore  Cargo.toml  Dockerfile  Orchestration.yaml  README.md  api.yaml  build.rs  diesel.toml
dozer-api/examples/: reader.rs
dozer-api/generator/: index.js  oapi_generator  package.json
dozer-api/protos/: api.proto  films.proto  health.proto  internal.proto  types.proto
dozer-api/src/: api_auth.rs  api_generator.rs  api_helper.rs  api_server.rs  api_validator.rs  common_query.rs  converter.rs  errors.rs  grpc_server.rs  lib.rs  main.rs  proto_util.rs  rest_error.rs  routes.rs  schema.rs  server.rs  test_utils.rs  tests.rs
dozer-api/tests/: test_api.rs  test_generator.rs
dozer-cache/: Cargo.toml
dozer-cache/benches/: cache.rs  query_deserialize.rs
dozer-cache/proto/: document.proto
dozer-cache/src/: errors.rs  lib.rs  main.rs  reader.rs
dozer-cli/: Cargo.toml  build.rs
dozer-cli/src/: cloud_app_context.rs  cloud_helper.rs  config_helper.rs  console_helper.rs  errors.rs  home_dir.rs  lib.rs  main.rs  progress_printer.rs  tests.rs  ui_helper.rs  utils.rs
dozer-core/: Cargo.toml
dozer-core/src/: aggregation.rs  app.rs  appsource.rs  builder_dag.rs  channels.rs  dag.rs  dag_checkpoint.rs  dag_impl.rs  dag_metadata.rs  dag_schemas.rs  epoch.rs  error_manager.rs  errors.rs  execution.rs  executor.rs  executor_operation.rs  executor_utils.rs  forwarder.rs  lib.rs  nested_join.rs  node.rs  processor_record.rs  record_store.rs  record_store_hashkey.rs  shutdown.rs  sources.rs  state.rs  storage.rs  tests.rs
dozer-deno/: Cargo.toml
dozer-deno/js/: 06_util.js  98_global_scope.js  99_main.js  README.md
dozer-deno/src/: lib.rs
dozer-ingestion/: Cargo.toml  README.md  SPEC.md  build.rs
dozer-ingestion/aerospike/: Cargo.toml
dozer-ingestion/benches/: connectors.rs  connectors.sample.yaml  debezium.rs  grpc.rs  grpc.yaml  helper.rs  postgres.rs  snowflake.rs
dozer-ingestion/connector/: Cargo.toml
dozer-ingestion/deltalake/: Cargo.toml
dozer-ingestion/dozer/: Cargo.toml
dozer-ingestion/ethereum/: Cargo.toml
dozer-ingestion/examples/: ethereum.rs
dozer-ingestion/grpc/: Cargo.toml
dozer-ingestion/javascript/: Cargo.toml
dozer-ingestion/kafka/: Cargo.toml
dozer-ingestion/mongodb/: Cargo.toml
dozer-ingestion/mysql/: Cargo.toml
dozer-ingestion/object-store/: Cargo.toml
dozer-ingestion/oracle/: Cargo.toml
dozer-ingestion/postgres/: Cargo.toml
dozer-ingestion/protos/: ingest.proto  types.proto
dozer-ingestion/snowflake/: Cargo.toml
dozer-ingestion/src/: cli.rs  connectors.rs  errors.rs  ingestion_server.rs  large_film_test.rs  lib.rs  main.rs  measure.rs  storage_client.rs  test_util.rs  utils.rs
dozer-ingestion/tests/: test_connectors.rs
dozer-ingestion/webhook/: Cargo.toml
dozer-lambda/: Cargo.toml
dozer-lambda/src/: lib.rs
dozer-log/: Cargo.toml
dozer-log-js/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  prerelease.patch  read.js
dozer-log-js/examples/: reader.js
dozer-log-js/src/: lib.rs  mapper.rs
dozer-log-python/: Cargo.toml  README.md  pyproject.toml
dozer-log-python/.cargo/: config
dozer-log-python/examples/: reader.py
dozer-log-python/src/: lib.rs  mapper.rs
dozer-log/examples/: reader.rs
dozer-log/src/: errors.rs  home_dir.rs  lib.rs  reader.rs  schemas.rs  writer.rs
dozer-orchestrator/: .env  Cargo.toml  diesel.toml  dozer-config.yaml
dozer-orchestrator/src/: cli.rs  cloud_helper.rs  errors.rs  lib.rs  main.rs  orchestrator.rs  sample.rs  shutdown.rs  simple.rs  telemetry.rs  test_utils.rs  utils.rs
dozer-pipeline/: .gitignore  Cargo.toml
dozer-pipeline/config/: log4rs.yaml
dozer-pipeline/src/: dag.rs  dag_executor.rs  execution.rs  executor.rs  filter_node.rs  main.rs  nodes.rs  record.rs
dozer-recordstore/: Cargo.toml
dozer-recordstore/fuzz/: Cargo.toml
dozer-recordstore/src/: lib.rs  rocksdb.rs  store.rs
dozer-schema/: Cargo.toml
dozer-schema/proto/: schema.proto
dozer-schema/src/: client.rs  lib.rs  main.rs  registry.rs  storage.rs  test_helper.rs
dozer-services/: Cargo.toml
dozer-services/protos/: auth.proto  cloud_types.proto  common.proto  contract.proto  ingest.proto  telemetry.proto  types.proto
dozer-services/src/: lib.rs
dozer-shared/: Cargo.toml  build.rs
dozer-shared/proto/: ingestion.proto  storage.proto
dozer-shared/src/: lib.rs  types.rs
dozer-sink-aerospike/: Cargo.toml
dozer-sink-aerospike/aerospike-client-sys/: Cargo.toml  aerospike_client.h  build.rs
dozer-sink-aerospike/src/: aerospike.rs  denorm_dag.rs  lib.rs
dozer-sink-clickhouse/: Cargo.toml
dozer-sink-clickhouse/src/: client.rs  ddl.rs  errors.rs  lib.rs  metadata.rs  schema.rs  sink.rs  tests.rs  types.rs
dozer-sink-oracle/: Cargo.toml
dozer-sink-oracle/src/: lib.rs
dozer-sinks/: Cargo.toml
dozer-sinks/bigquery/: Cargo.toml
dozer-sinks/snowflake/: Cargo.toml
dozer-sinks/src/: lib.rs
dozer-sql/: Cargo.toml
dozer-storage/: Cargo.toml
dozer-tests/: Cargo.toml  README.md  log4rs.tests.yaml
dozer-tracing/: Cargo.toml
dozer-types/: Cargo.toml  build.rs
mysql-connector/: Cargo.toml  config.properties  docker-compose.yml
(+2020 files in other folders)
