[workspace]
members = [
  "dozer-api",
  "dozer-ingestion",
  "dozer-types",
  "dozer-storage",
  "dozer-core",
  "dozer-cli",
  "dozer-sql",
  "dozer-cache",
  "dozer-tracing",
  "dozer-tests",
  "dozer-log",
  "dozer-log-js",
  "dozer-log-python",
  "dozer-utils",
  "dozer-recordstore",
  "dozer-lambda",
]
resolver = "2"

[workspace.dependencies]
bincode = { version = "2.0.0-rc.3", features = ["derive"]}
datafusion = { version = "33.0.0"}
datafusion-expr = { version = "33.0.0"}

[patch.crates-io]
postgres = { git = "https://github.com/getdozer/rust-postgres" }
postgres-protocol = { git = "https://github.com/getdozer/rust-postgres" }
postgres-types = { git = "https://github.com/getdozer/rust-postgres" }
tokio-postgres = { git = "https://github.com/getdozer/rust-postgres" }

datafusion = { git = "https://github.com/abcpro1/arrow-datafusion", branch = "disable-ambiguity-check" }
datafusion-expr = { git = "https://github.com/abcpro1/arrow-datafusion", branch = "disable-ambiguity-check" }
datafusion-physical-expr = { git = "https://github.com/abcpro1/arrow-datafusion", branch = "disable-ambiguity-check"}
datafusion-physical-plan = { git = "https://github.com/abcpro1/arrow-datafusion", branch = "disable-ambiguity-check"}
datafusion-sql = { git = "https://github.com/abcpro1/arrow-datafusion", branch = "disable-ambiguity-check"}
datafusion-proto = { git = "https://github.com/abcpro1/arrow-datafusion", branch = "disable-ambiguity-check"}
datafusion-common = { git = "https://github.com/abcpro1/arrow-datafusion", branch = "disable-ambiguity-check"}
