[workspace]
members = [
  "dozer-ingestion",
  "dozer-types",
  "dozer-core",
  "dozer-cli",
  "dozer-sql",
  "dozer-tracing",
  "dozer-tests",
  "dozer-utils",
  "dozer-sink-clickhouse",
]
resolver = "2"

[workspace.dependencies]
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
deno_core = { version = "0.270", features = ["lazy_eval_snapshot"] }

[patch.crates-io]
postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
postgres-protocol = { git = "https://github.com/MaterializeInc/rust-postgres" }
postgres-types = { git = "https://github.com/MaterializeInc/rust-postgres" }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }

clickhouse-rs = { git = "https://github.com/getdozer/clickhouse-rs" }
clickhouse-rs-cityhash-sys = { git = "https://github.com/getdozer/clickhouse-rs" }

[profile.dev]
debug = 0
