[package]
name = "dozer-admin"
version = "0.0.1"
authors = ["Karolis Gudiškis <karolis@getdozer.io>"]
edition = "2021"
build = "build.rs"

[dependencies]
futures = "0.3.23"
json = "0.12.4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.85"
dotenvy = "0.15.3"
r2d2 = "0.8.2"
diesel = { version = "2.0.0", features = ["sqlite", "serde_json", "r2d2"] }
log = "0.4.17"
log4rs = "1.1.1"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
tonic = "0.8.2"
tokio = "1.21.0"
prost-types = "0.11.1"
prost = "0.11.0"
tonic-web = "0.4.0"
dozer-orchestrator = {version = "0.1.0", path = "../dozer-orchestrator"}
dozer-types = {version = "0.1.0", path = "../dozer-types"}
tonic-build = "0.8.0"
mockall = "0.11.2"
cargo-expand = "1.0.31"
tonic-reflection = "0.5.0"
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }

[build-dependencies]
tonic-build = "0.8.2"

[features]
default = []
snowflake = ["dozer-types/snowflake", "dozer-orchestrator/snowflake"]
