[package]
name = "dozer-admin"
version = "0.1.17"
authors = ["getdozer/dozer-dev"]
edition = "2021"

[dependencies]
dozer-orchestrator = {path = "../dozer-orchestrator"}
dozer-types = {path = "../dozer-types"}
dozer-tracing = {path = "../dozer-tracing"}
dozer-api = {path = "../dozer-api"}

futures = "0.3.23"
json = "0.12.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
r2d2 = "0.8.2"
diesel = { version = "2.0.3", features = ["chrono", "postgres", "serde_json", "r2d2"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tonic = "0.8.2"
tokio = "1.25.0"
prost-types = "0.11.1"
tonic-web = "0.4.0"
tonic-build = "0.8.0"
mockall = "0.11.2"
tonic-reflection = "0.6.0"
tower-http = {version = "0.3.5", features = ["full"]}
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
prost = "0.11.8"
clap = {version = "4.1.11", features = ["derive"]}
glob = "0.3.1"
tokio-stream = "0.1.12"
notify = "5.1.0"

[build-dependencies]
tonic-build = "0.8.2"

[features]
default = []
snowflake = ["dozer-types/snowflake", "dozer-orchestrator/snowflake"]
admin-sqlite = ["diesel/sqlite"]

[[bin]]
edition = "2021"
name = "dozer-admin"
path = "src/main.rs"
