[package]
name = "dozer-api"
version = "0.1.20"

edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-cache = {path = "../dozer-cache"}
dozer-types = {path = "../dozer-types"}
dozer-tracing = {path = "../dozer-tracing"}
dozer-core = { path = "../dozer-core" }

actix-cors = "0.6.3"
actix-http = { version = "3.3.0", default-features = false, features = ["rustls"] }
actix-web = { version = "4.2.1", default-features = false, features = ["macros", "compress-brotli", "compress-gzip", "compress-zstd", "cookies", "rustls"] }
actix-web-httpauth = "0.8.0"
handlebars = "4.3.5"
openapiv3 = "1.0.2"
tonic-build = "0.8.2"
tokio = { version = "1", features = ["full"] }
tonic = {version = "0.8.3"}
prost = "0.11.8"
prost-reflect = { version = "0.10.2", features = ["serde", "text-format"] } 
tonic-reflection = "0.6.0"
Inflector = "0.11.4"
futures-util = "0.3.27"
prost-build = "0.11.6"
tonic-web = "0.4.0"
jsonwebtoken = "8.3.0"
tokio-stream = "0.1.12"
crossbeam = "0.8.2"
async-trait = "0.1.66"
tracing-actix-web = "0.7.2"
tower = "0.4.13"
hyper = "0.14.24"
tower-http = {version = "0.3.5", features = ["full"]}
arc-swap = "1.6.0"

[dev-dependencies]
tempdir = "0.3.7"
