[package]
name = "dozer-api"
version = "0.1.39"

edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-cache = { path = "../dozer-cache" }
dozer-types = { path = "../dozer-types" }
dozer-tracing = { path = "../dozer-tracing" }
dozer-core = { path = "../dozer-core" }

actix-cors = "0.6.3"
actix-http = { version = "3.4.0", default-features = false, features = [
    "rustls",
] }
actix-web = { version = "4.2.1", default-features = false, features = [
    "macros",
    "compress-brotli",
    "compress-gzip",
    "compress-zstd",
    "cookies",
    "rustls",
] }
actix-web-httpauth = "0.8.0"
handlebars = "4.4.0"
openapiv3 = "1.0.3"
tonic-build = "0.10.0"
tokio = { version = "1", features = ["full"] }
prost-reflect = { version = "0.12.0", features = ["serde", "text-format"] }
tonic-reflection = "0.10.0"
Inflector = "0.11.4"
futures-util = "0.3.28"
prost-build = "0.12.0"
tonic-web = "0.10.2"
jsonwebtoken = "8.3.0"
tokio-stream = "0.1.12"
async-trait = "0.1.74"
tracing-actix-web = "0.7.6"
tower = "0.4.13"
hyper = "0.14.24"
tower-http = { version = "0.4", features = ["full"] }
arc-swap = "1.6.0"
metrics = "0.21.0"
gethostname = "0.4.3"
http-body = "0.4.5"
bytes = "1.4.0"
http = "0.2.9"
pin-project = "1.1.3"
async-stream = "0.3.5"
uuid = "1.4.1"

[dev-dependencies]
tempdir = "0.3.7"
