[package]
name = "dozer-cache"
version = "0.1.11"
edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = {path = "../dozer-types"}
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tempdir = "0.3.7"
futures = "0.3.26"
unicode-segmentation = "1.10.1"
itertools = "0.10.5"
roaring = "0.10.1"
dozer-storage = { path = "../dozer-storage" }
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
criterion = "0.4"
rand = "0.8.5"

[[bench]]
name = "cache"
harness = false
