[package]
name = "dozer-cache"
version = "0.3.0"
edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../dozer-types" }
dozer-storage = { path = "../dozer-storage" }
dozer-log = { path = "../dozer-log" }
dozer-tracing = { path = "../dozer-tracing" }

tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tempdir = "0.3.7"
futures = "0.3.28"
unicode-segmentation = "1.10.1"
itertools = "0.10.5"
roaring = "0.10.2"
uuid = { version = "1.6.1", features = ["v4"] }
rayon = "1.8.0"
ahash = "0.8.3"
metrics = "0.21.0"
clap = { version = "4.4.1", features = ["derive"] }
env_logger = "0.10.0"
bincode = { workspace = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8.5"

[[bench]]
name = "cache"
harness = false
