[package]
name = "dozer-cli"
version = "0.2.0"
edition = "2021"
default-run = "dozer"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.deb]
name = "dozer"

[dependencies]
dozer-api = { path = "../dozer-api" }
dozer-ingestion = { path = "../dozer-ingestion" }
dozer-core = { path = "../dozer-core" }
dozer-cache = { path = "../dozer-cache" }
dozer-sql = { path = "../dozer-sql" }
dozer-types = { path = "../dozer-types" }
dozer-tracing = { path = "../dozer-tracing" }
dozer-storage = { path = "../dozer-storage" }
dozer-recordstore = { path = "../dozer-recordstore" }

uuid = { version = "1.3.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tempdir = "0.3.7"
clap = { version = "4.4.1", features = ["derive"] }
tonic = { version = "0.10.0", features = ["tls", "tls-roots"] }
tokio-stream = "0.1.12"
include_dir = "0.7.3"
handlebars = "4.4.0"
rustyline = "12.0.0"
rustyline-derive = "0.9.0"
futures = "0.3.28"
page_size = "0.6.0"
reqwest = { version = "0.11.20", features = [
  "rustls-tls",
  "cookies",
], default-features = false }
glob = "0.3.1"
atty = "0.2.14"
tower = "0.4.13"
metrics = "0.21.0"
zip = "0.5.11"
notify = "6.0.1"
notify-debouncer-full = "0.2.0"
webbrowser = "0.8.10"
tempfile = "3.8"
actix-files = "0.6.2"
prometheus-parse = "0.2.4"

[build-dependencies]
dozer-types = { path = "../dozer-types" }

[[bin]]
edition = "2021"
name = "dozer"
path = "src/main.rs"

[features]
snowflake = ["dozer-ingestion/snowflake"]
mongodb = ["dozer-ingestion/mongodb"]
onnx = ["dozer-sql/onnx"]
tokio-console = ["dozer-tracing/tokio-console"]
