[package]
name = "dozer-core"
version = "0.3.0"
edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-log = { path = "../dozer-log/" }
dozer-storage = { path = "../dozer-storage/" }
dozer-types = { path = "../dozer-types/" }
dozer-tracing = { path = "../dozer-tracing/" }
dozer-recordstore = { path = "../dozer-recordstore/" }
bincode = { workspace = true }

uuid = { version = "1.6.1", features = ["v1", "v4", "fast-rng"] }
crossbeam = "0.8.2"
daggy = { git = "https://github.com/getdozer/daggy", branch = "feat/try_map", features = [
    "serde-1",
] }
metrics = "0.21.0"

tempdir = "0.3.7"
