[package]
name = "dozer-core"
version = "0.4.0"
edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../dozer-types/" }
dozer-tracing = { path = "../dozer-tracing/" }
bincode = { workspace = true }

uuid = { version = "1.6.1", features = ["v1", "v4", "fast-rng"] }
crossbeam = "0.8.2"
daggy = { git = "https://github.com/getdozer/daggy", branch = "feat/try_map", features = [
    "serde-1",
] }
futures-util = "0.3.28"
async-stream = "0.3.5"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
