[package]
name = "dozer-deno"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../dozer-types" }
deno_runtime = "0.129.0"
deno_ast = "0.29.5"
tokio = "1.33.0"
deno_cache_dir = "0.6.2"
encoding_rs = "0.8.33"
once_cell = "1.18.0"
tempdir = "0.3.7"
