[package]
name = "dozer-deno"
version = "0.4.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../dozer-types" }
tokio = "1.33.0"
deno_cache_dir = "0.7.1"
encoding_rs = "0.8.33"
once_cell = "1.18.0"
tempfile = "3.10.1"

deno_ast = { version = "1.0", features = ["transpiling"] }
deno_core = { workspace = true }
deno_permissions = "0.2"
deno_terminal = "0.1.1"
deno_broadcast_channel = "0.136"
deno_cache = "0.74"
deno_console = "0.142"
deno_crypto = "0.156"
deno_fetch = "0.166"
deno_napi = "0.72"
deno_tls = "0.129"
deno_url = "0.142"
deno_web = "0.173"
deno_webidl = "0.142"
deno_websocket = "0.147"
deno_webstorage = "0.137"
