[package]
name = "dozer-ingestion"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.26"
dozer-types = { path = "../dozer-types" }
crossbeam = "0.8.2"
# Postgres connector
postgres = "0.19.4"
postgres-protocol = "0.6.4"
postgres-types = "0.2.4"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4", "with-geo-types-0_7"] }
# DataFusion connector
datafusion = "18.0.0"
object_store = { version = "0.5", features = ["aws"] }
# Eth connector
web3 = "0.18.0"
# Kafka connector
kafka = "0.9.0"
# odbc connector
odbc = { version = "0.17.0", optional = true }
base64 = "0.21.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
include_dir = {version = "0.7.3", optional = true }
schema_registry_converter = { version = "3.1.0", features = ["blocking", "avro"] }
regex = "1"
tonic = {version = "0.8.3"}
tonic-web = "0.4.0"
tonic-reflection = "0.6.0"
tower-http = {version = "0.3.5", features = ["full"]}
prost = "0.11.0"
prost-reflect = { version = "0.10.2", features = ["serde", "text-format"] } 

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
serial_test = "1.0.0"
rand = "0.8.5"
include_dir = "0.7.3"
dozer-tracing = {path = "../dozer-tracing"}
hex-literal = "0.3.4"

[build-dependencies]
tonic-build = "0.8.2"


[features]
# Defines a feature named `odbc` that does not enable any other features.
snowflake = ["dep:odbc", "dep:include_dir"]
# workaroud to ignore debezium benchmarking when running `cargo criterion` without any parameters
debezium_bench = []
postgres_bench = ["dep:include_dir"]

# Temporary disalbe
#[[bench]]
#name = "snowflake"
#harness = false
#required-features = ["snowflake"]

#[[bench]]
#name = "debezium"
#harness = false
#required-features = ["debezium_bench"]
#
#[[bench]]
#name = "postgres"
#harness = false
#required-features = ["postgres_bench"]