[package]
name = "dozer-ingestion"
version = "0.1.21"
edition = "2021"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-utils = { path = "../dozer-utils" }
dozer-types = { path = "../dozer-types" }

tokio = { version = "1", features = ["full"] }
futures = "0.3.26"
crossbeam = "0.8.2"
# Postgres connector
postgres-protocol = "0.6.4"
postgres-types = { version = "0.2.4", features = ["with-serde_json-1", "with-uuid-1"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4", "with-geo-types-0_7", "with-uuid-1"] }
# DataFusion connector
object_store = { version = "0.5", features = ["aws"] }
# Eth connector
web3 = { version = "0.18.0", optional = true }
# Kafka connector
kafka = {version = "0.9.0", optional = true }
# odbc connector
odbc = { version = "0.17.0", optional = true }
base64 = "0.21.0"
include_dir = {version = "0.7.3", optional = true }
schema_registry_converter = { version = "3.1.0", features = ["blocking", "avro"], optional = true }
regex = "1"
tonic = {version = "0.8.3"}
tonic-web = "0.4.0"
tonic-reflection = "0.6.0"
tower-http = {version = "0.3.5", features = ["full"]}
prost = "0.11.8"
prost-reflect = { version = "0.10.2", features = ["serde", "text-format"] }
deltalake = { version = "0.8.0", default-features = false, features = ["s3", "datafusion"] }
bson = "2.5.0"
uuid = { version = "1.3.1", features = ["serde", "v4"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
serial_test = "1.0.0"
rand = "0.8.5"
hex-literal = "0.3.4"
dozer-tracing = {path = "../dozer-tracing"}
tempdir = "0.3.7"
parquet = "33.0.0"
env_logger = "0.10.0"
hex = "0.4.3"

[features]
# Defines a feature named `odbc` that does not enable any other features.
snowflake = ["dep:odbc", "dep:include_dir"]
kafka = ["dep:kafka", "dep:schema_registry_converter"]
ethereum = ["dep:web3"]

[[bench]]
name = "connectors"
harness = false

[[bench]]
name = "grpc"
harness = false
