[package]
name = "dozer-ingestion"
version = "0.4.0"
edition = "2021"
authors = ["getdozer/dozer-dev"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-ingestion-connector = { path = "./connector" }
dozer-ingestion-deltalake = { path = "./deltalake", optional = true }
dozer-ingestion-ethereum = { path = "./ethereum", optional = true }
dozer-ingestion-grpc = { path = "./grpc" }
dozer-ingestion-javascript = { path = "./javascript", optional = true }
dozer-ingestion-kafka = { path = "./kafka", optional = true }
dozer-ingestion-mongodb = { path = "./mongodb", optional = true }
dozer-ingestion-mysql = { path = "./mysql" }
dozer-ingestion-object-store = { path = "./object-store", optional = true }
dozer-ingestion-postgres = { path = "./postgres" }
dozer-ingestion-snowflake = { path = "./snowflake", optional = true }
dozer-ingestion-webhook = { path = "./webhook" }

tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
prost-reflect = { version = "0.12.0", features = ["serde", "text-format"] }
rand = "0.8.5"
url = "2.4.1"
chrono = "0.4.26"
bytes = "1.4.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serial_test = "2.0.0"
dozer-tracing = { path = "../dozer-tracing" }
tempfile = "3.10.1"
parquet = "50.0.0"
env_logger = "0.10.0"
hex = "0.4.3"
dozer-utils = { path = "../dozer-utils" }

[features]
snowflake = ["dep:dozer-ingestion-snowflake"]
ethereum = ["dep:dozer-ingestion-ethereum"]
kafka = ["dep:dozer-ingestion-kafka"]
mongodb = ["dep:dozer-ingestion-mongodb"]
datafusion = [
  "dep:dozer-ingestion-deltalake",
  "dep:dozer-ingestion-object-store",
]
javascript = ["dep:dozer-ingestion-javascript"]


[[bench]]
name = "connectors"
harness = false

[[bench]]
name = "grpc"
harness = false
