[package]
name = "dozer-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../dozer-types" }
dozer-log = { path = "../dozer-log" }
deno_runtime = "0.129.0"

[dev-dependencies]
env_logger = "0.10.0"
