[package]
name = "dozer-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../dozer-types" }
dozer-log = { path = "../dozer-log" }
dozer-deno = { path = "../dozer-deno" }
async-recursion = "1.0.5"

[dev-dependencies]
env_logger = "0.10.0"
