[package]
name = "dozer-log-js"
version = "0.1.27"
description = "Node.js binding for reading Dozer logs"
authors = ["getdozer/dozer-dev"]
license = "Apache-2.0"
edition = "2018"
exclude = ["index.node"]

[lib]
name = "log"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-log = { path = "../dozer-log" }
dozer-types = { path = "../dozer-types" }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]
