[package]
name = "dozer-log-python"
version = "0.1.36"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pydozer_log"
crate-type = ["cdylib"]

[dependencies]
dozer-log = { path = "../dozer-log", optional = true }
dozer-types = { path = "../dozer-types", features = ["python-extension-module"], optional = true }
pyo3-asyncio = { version = "0.18.0", optional = true, features = ["tokio-runtime"] }

[features]
python-extension-module = ["dozer-log", "dozer-types", "pyo3-asyncio"]
