[package]
name = "dozer-orchestrator"
version = "0.1.17"
edition = "2021"
default-run = "dozer"
authors = ["getdozer/dozer-dev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.deb]
name = "dozer"

[dependencies]
dozer-api = {path = "../dozer-api"}
dozer-ingestion = {path = "../dozer-ingestion"}
dozer-core = {path = "../dozer-core"}
dozer-cache = {path = "../dozer-cache"}
dozer-sql = {path = "../dozer-sql"}
dozer-types = {path = "../dozer-types"}
dozer-tracing = {path = "../dozer-tracing"}
dozer-storage = { path = "../dozer-storage" }

dotenvy = "0.15.3"
serde_json = "1.0.93"
serde = "1.0.152"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tempdir = "0.3.7"
clap = {version = "4.1.11", features = ["derive"]}
ctrlc = "3.2.5"
tonic = "0.8.3"
tokio-stream = "0.1.12"
include_dir = "0.7.3"
handlebars = "4.3.6"
rustyline = "10.1.1"
rustyline-derive = "0.8.0"
futures = "0.3.26"
page_size = "0.5.0"
reqwest = { version = "0.11.16", features = ["rustls-tls"], default-features = false }

[[bin]]
edition = "2021"
name = "dozer"
path = "src/main.rs"

[features]
snowflake = ["dozer-types/snowflake", "dozer-ingestion/snowflake"]
