[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
futures = "0.3.24"
async-trait = "0.1.57"
log = "0.4.17"
log4rs = "1.1.1"