[package]
name = "dozer-recordstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fuzz = ["dozer-types/arbitrary"]

[dependencies]
dozer-types = { path = "../dozer-types" }
dozer-storage = { path = "../dozer-storage" }
slice-dst = { version = "1.5.1", default-features = false }
tempdir = "0.3.7"
