[package]
name = "dozer-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tarpc = {version = "0.30.0", features = ["full"]}
dozer-types = {path = "../dozer-types"}
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
anyhow = "1.0"
futures = "0.3"
rocksdb = "*"
bincode= "1.3.3"
tempdir = "0.3.7"
log = "0.4.17"
log4rs = "1.1.1"