[package]
name = "dozer-services"
version = "0.1.39"
authors = ["getdozer/dozer-dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-types = { path = "../dozer-types" }
tonic = "0.10.2"
prost-types = "0.12.0"
prost = "0.12.0"

[build-dependencies]
tonic-build = "0.10.2"
