[package]
name = "dozer-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.85"
bson = { version = "2.4.0", features = ["chrono-0_4"] }
rust_decimal =  {version = "1.26", features = ["serde-float"]}