[package]
name = "dozer-sink-aerospike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-core = { path = "../dozer-core" }
dozer-types = { path = "../dozer-types" }
aerospike-client-sys = { path = "./aerospike-client-sys" }
crossbeam-channel = "0.5.11"
