[package]
name = "dozer-sink-aerospike"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-core = { path = "../dozer-core" }
dozer-types = { path = "../dozer-types" }
aerospike-client-sys = { path = "./aerospike-client-sys" }
itertools = "0.12"
smallvec = "1.13.1"
