[package]
name = "dozer-sink-clickhouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-core = { path = "../dozer-core" }
dozer-types = { path = "../dozer-types" }
dozer-log = { path = "../dozer-log" }
clickhouse = { git = "https://github.com/getdozer/clickhouse.rs.git" }